--- a/HappyTravels/app/src/main/res/menu/activity_main_drawer.xml
+++ b/HappyTravels/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,21 +3,42 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_hotel"
+            android:icon="@drawable/ic_local_hotel_black_24dp"
+            android:title="Hotel" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_restaurants"
+            android:icon="@drawable/ic_restaurant_menu_black_24dp"
+            android:title="Restaurants" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_beach"
+            android:icon="@drawable/ic_directions_boat_black_24dp"
+            android:title="Beaches" />
+
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_clubs"
+            android:icon="@drawable/ic_local_bar_black_24dp"
+            android:title="Night-Clubs" />
+
+
+        <item
+            android:id="@+id/nav_airport"
+            android:icon="@drawable/ic_local_airport_black_24dp"
+            android:title="Airports" />
+        <item
+            android:id="@+id/nav_other"
+            android:icon="@drawable/ic_map_black_24dp"
+            android:title="Other Places" />
+
+        <item
+            android:id="@+id/nav_transport"
+            android:icon="@drawable/ic_directions_transit_black_24dp"
+            android:title="Transportation" />
+
+        <item
+            android:id="@+id/nav_emergency"
+            android:icon="@drawable/ic_local_hospital_black_24dp"
+            android:title="Emergency" />
     </group>
 
     <item android:title="Communicate">
