--- a/HappyTravels/app/src/main/res/layout/content_main.xml
+++ b/HappyTravels/app/src/main/res/layout/content_main.xml
@@ -13,8 +13,9 @@
     tools:context="com.idayanisdiazfernandez.happytravels.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <FrameLayout
+        android:id="@+id/mainFragmenLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
 </RelativeLayout>
