--- a/HappyTravels/app/src/main/res/menu/main.xml
+++ b/HappyTravels/app/src/main/res/menu/main.xml
@@ -2,8 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_themes"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Themes"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_language"
+        android:orderInCategory="100"
+        android:title="Language"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_reset"
+        android:orderInCategory="100"
+        android:title="Reset Data"
         app:showAsAction="never" />
 </menu>
