--- a/HappyTravels/app/src/main/res/layout/fragment_main.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_main.xml
@@ -18,4 +18,12 @@
             android:text="Hello Card" />
 
     </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:scrollbars="vertical" />
+
 </LinearLayout>
