--- a/HappyTravels/app/src/main/res/layout/place_card.xml
+++ b/HappyTravels/app/src/main/res/layout/place_card.xml
@@ -3,18 +3,23 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content"
         android:elevation="3dp"
         card_view:cardCornerRadius="5dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
         <ImageView
             android:id="@+id/thumbnail"
+            android:src="@drawable/place5"
             android:layout_width="match_parent"
             android:layout_height="@dimen/place_cover_height"
             android:background="?attr/selectableItemBackgroundBorderless"
@@ -25,11 +30,11 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/thumbnail"
             android:paddingLeft="@dimen/place_title_padding"
             android:paddingRight="@dimen/place_title_padding"
             android:paddingTop="@dimen/place_title_padding"
             android:textSize="@dimen/place_title" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
