--- a/HappyTravels/app/src/main/res/layout/fragment_airport.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_airport.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -39,4 +39,4 @@
 
     </android.support.v7.widget.CardView>
 
-</FrameLayout>
+</LinearLayout>
