--- a/HappyTravels/app/src/main/res/layout/place_card.xml
+++ b/HappyTravels/app/src/main/res/layout/place_card.xml
@@ -19,7 +19,7 @@
 
         <ImageView
             android:id="@+id/thumbnail"
-            android:src="@drawable/place"
+            android:src="@drawable/place1"
             android:layout_width="match_parent"
             android:layout_height="@dimen/place_cover_height"
             android:background="?attr/selectableItemBackgroundBorderless"
