--- a/HappyTravels/app/src/main/res/values/dimens.xml
+++ b/HappyTravels/app/src/main/res/values/dimens.xml
@@ -11,4 +11,12 @@
     <dimen name="place_cover_height">160dp</dimen>
     <dimen name="place_title_padding">10dp</dimen>
     <dimen name="place_title">15dp</dimen>
+
+    <dimen name="button_toolbar_margin">20dp</dimen>
+    <dimen name="theme_button_margin">5dp</dimen>
+    <dimen name="title_text_size">18sp</dimen>
+    <dimen name="text_size">17sp</dimen>
+    <dimen name="title_margin">10dp</dimen>
+    <dimen name="text_vertical_padding">10dp</dimen>
+    <dimen name="text_horizontal_padding">5dp</dimen>
 </resources>
