--- a/HappyTravels/app/src/main/res/values/styles.xml
+++ b/HappyTravels/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Theme 1 - Blue Default App Theme -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryDark">@color/dark_blue</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -9,7 +9,7 @@
     </style>
 
     <!-- Theme 2 - Red  -->
-    <style name="RedTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="RedTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/red</item>
         <item name="colorPrimaryDark">@color/dark_red</item>
         <!-- The accent color for other styles is pink which doesn't match with red-->
@@ -18,7 +18,7 @@
     </style>
 
     <!-- Theme 3 - Pink  -->
-    <style name="PinkTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="PinkTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/pink</item>
         <item name="colorPrimaryDark">@color/dark_pink</item>
         <!-- The accent color for other styles is pink which doesn't match with pink-->
@@ -27,7 +27,7 @@
     </style>
 
     <!-- Theme 4 - Purple -->
-    <style name="PurpleTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="PurpleTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/purple</item>
         <item name="colorPrimaryDark">@color/dark_purple</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -35,7 +35,7 @@
     </style>
 
     <!-- Theme 5 - Indigo -->
-    <style name="IndigoTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="IndigoTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/indigo</item>
         <item name="colorPrimaryDark">@color/dark_indigo</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -43,7 +43,7 @@
     </style>
 
     <!-- Theme 6 - Cyan  -->
-    <style name="CyanTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="CyanTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/cyan</item>
         <item name="colorPrimaryDark">@color/dark_cyan</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -51,7 +51,7 @@
     </style>
 
     <!-- Theme 7 - Teal -->
-    <style name="TealTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="TealTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/teal</item>
         <item name="colorPrimaryDark">@color/dark_teal</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -59,7 +59,7 @@
     </style>
 
     <!-- Theme 8 - Green -->
-    <style name="GreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="GreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryDark">@color/dark_green</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -67,7 +67,7 @@
     </style>
 
     <!-- Theme 9 - Light Green -->
-    <style name="LightGreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="LightGreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/light_green</item>
         <item name="colorPrimaryDark">@color/dark_deep_green</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -75,7 +75,7 @@
     </style>
 
     <!-- Theme 10 - Orange -->
-    <style name="OrangeTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="OrangeTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryDark">@color/dark_orange</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -83,7 +83,7 @@
     </style>
 
     <!-- Theme 11 - Deep Orange-->
-    <style name="DeepOrange" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="DeepOrange" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/deep_orange</item>
         <item name="colorPrimaryDark">@color/dark_deep_orange</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -91,7 +91,7 @@
     </style>
 
     <!-- Theme 12 - Brown -->
-    <style name="BrownTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BrownTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/brown</item>
         <item name="colorPrimaryDark">@color/dark_brown</item>
         <item name="colorAccent">@color/color_accent</item>
