--- a/HappyTravels/app/src/main/res/layout/fragment_airport.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_airport.xml
@@ -39,4 +39,34 @@
 
     </android.support.v7.widget.CardView>
 
+
+    <TextView
+        android:text='Name: Aeropurto Internacional, "Frank Pais."'
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/name"
+        android:textSize="20sp"
+        android:textAlignment="viewStart"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textStyle="normal|bold"
+        android:fontFamily="serif" />
+
+    <TextView
+        android:text="Location: Carretera Central, Via Bayamo Km 15, Holguin, Cuba"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/location"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textStyle="normal|bold"
+        android:fontFamily="serif" />
+
+    <Button
+        android:text="Map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/map" />
+
 </LinearLayout>
