--- a/HappyTravels/app/src/main/res/layout/fragment_hotel.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_hotel.xml
@@ -2,7 +2,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/hotelFragment">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -35,6 +36,12 @@
                 android:text="HOTEL"
                 android:textSize="20dp"
                 android:fontFamily="sans-serif-smallcaps" />
+
+            <Button
+                android:text="Gallery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/galleryButton" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
