--- a/HappyTravels/app/src/main/res/layout/fragment_gallery.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_gallery.xml
@@ -1,8 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
     tools:context="com.idayanisdiazfernandez.happytravels.GalleryFragment">
 
 
@@ -11,4 +12,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/cover" />
-</FrameLayout>
+</LinearLayout>
