--- a/HappyTravels/app/src/main/res/layout/fragment_place.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_place.xml
@@ -39,4 +39,46 @@
 
     </android.support.v7.widget.CardView>
 
+
+
+    <TextView
+        android:text="Name:"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/name"
+        android:textSize="20sp"
+        android:textAlignment="viewStart"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textStyle="normal|bold"
+        android:fontFamily="serif" />
+
+    <TextView
+        android:text="Phone Number: "
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/phoneNumber"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textStyle="normal|bold"
+        android:fontFamily="serif"/>
+
+    <TextView
+        android:text="Location: "
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/location"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textStyle="normal|bold"
+        android:fontFamily="serif" />
+
+    <Button
+        android:text="Map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/map" />
+
 </LinearLayout>
