--- a/HappyTravels/app/src/main/res/layout/fragment_gallery_pager.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_gallery_pager.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_weight="5"
-    tools:context="com.idayanisdiazfernandez.happytravels.GalleryFragmentPager">
+    tools:context="com.idayanisdiazfernandez.happytravels.Tools.GalleryFragmentPager">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v4.view.ViewPager
