--- a/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
@@ -1,85 +1,148 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="3dp"
-        card_view:cardCornerRadius="5dp">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:elevation="3dp"
+            card_view:cardCornerRadius="5dp">
 
-            <ImageView
-                android:id="@+id/thumbnail"
-                android:src="@drawable/place8"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/place_cover_height"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:scaleType="fitXY" />
-
-            <TextView
-                android:id="@+id/hotelTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/place_title_padding"
-                android:paddingRight="@dimen/place_title_padding"
-                android:paddingTop="@dimen/place_title_padding"
-                android:text="EMERGENCY"
-                android:textSize="20dp"
-                android:fontFamily="sans-serif-smallcaps" />
-        </LinearLayout>
+                android:orientation="vertical">
 
-    </android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/place_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:text="Name of the Place"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/title_text_size"
+                    android:textStyle="normal|bold"
+                    android:padding="@dimen/text_padding" />
 
-    <TextView
-        android:text="Important Numbers:"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/numbers"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        android:textStyle="normal|bold" />
+                <ImageView
+                    android:id="@+id/thumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/cover_height"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/place11"
+                    android:adjustViewBounds="true"
+                    android:cropToPadding="true"
+                    android:layout_gravity="center_horizontal"/>
 
-    <TextView
-        android:text="Firefighters: 105"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/firefighters"
-        android:textSize="20sp"
-        android:textStyle="normal|bold"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="serif"/>
+                <LinearLayout
+                    android:id="@+id/actionButtonsLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-    <TextView
-        android:text="Police: 106"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/police"
-        android:textSize="20sp"
-        android:textStyle="normal|bold"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="serif"/>
+                    <ImageButton
+                        android:id="@+id/callImageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        card_view:srcCompat="@drawable/ic_phone_black_24dp" />
 
-    <TextView
-        android:text="Emergency: 113"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/emergency"
-        android:textSize="20sp"
-        android:textStyle="normal|bold"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="serif"/>
+                    <ImageButton
+                        android:id="@+id/emailImageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        card_view:srcCompat="@drawable/ic_email_black_24dp" />
 
+                    <ImageButton
+                        android:id="@+id/webImageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        card_view:srcCompat="@drawable/ic_web_black_24dp" />
+
+                    <ImageButton
+                        android:id="@+id/locationImageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        card_view:srcCompat="@drawable/ic_location_on_black_24dp" />
+
+                    <ImageButton
+                        android:id="@+id/photoImageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        card_view:srcCompat="@drawable/ic_collections_black_24dp" />
+
+                    <ImageButton
+                        android:id="@+id/shareImageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        card_view:srcCompat="@drawable/ic_share_black_24dp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/descriptionText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description of the place"
+                    android:textSize="@dimen/text_size"
+                    android:padding="@dimen/text_padding" />
+
+                <TextView
+                    android:id="@+id/timingText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Timing"
+                    android:textSize="@dimen/text_size"
+                    android:padding="@dimen/text_padding" />
+
+                <TextView
+                    android:id="@+id/priceText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Price"
+                    android:textSize="@dimen/text_size"
+                    android:padding="@dimen/text_padding" />
+
+                <TextView
+                    android:id="@+id/flightsText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Flights"
+                    android:textSize="@dimen/text_size"
+                    android:padding="@dimen/text_padding" />
+
+                <TextView
+                    android:id="@+id/phoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Phone Number"
+                    android:textSize="@dimen/text_size"
+                    android:padding="@dimen/text_padding" />
+
+                <TextView
+                    android:id="@+id/locationText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+                    android:textSize="@dimen/text_size"
+                    android:padding="@dimen/text_padding" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+    </ScrollView>
 
 </LinearLayout>
