--- a/HappyTravels/app/src/main/res/values/dimens.xml
+++ b/HappyTravels/app/src/main/res/values/dimens.xml
@@ -15,8 +15,10 @@
     <dimen name="button_toolbar_margin">20dp</dimen>
     <dimen name="theme_button_margin">5dp</dimen>
     <dimen name="title_text_size">18sp</dimen>
-    <dimen name="text_size">17sp</dimen>
+    <dimen name="text_size">14sp</dimen>
     <dimen name="title_margin">10dp</dimen>
     <dimen name="text_vertical_padding">10dp</dimen>
     <dimen name="text_horizontal_padding">5dp</dimen>
+    <dimen name="text_padding">10dp</dimen>
+    <dimen name="cover_height">170dp</dimen>
 </resources>
