--- a/HappyTravels/app/src/main/res/layout/fragment_gallery_pager.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_gallery_pager.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_weight="5"
     tools:context="com.idayanisdiazfernandez.happytravels.Tools.GalleryFragmentPager">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,19 +11,29 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:layout_weight="1"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_chevron_right_black_24dp"
-        android:id="@+id/nextButton" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="7">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_chevron_left_black_24dp"
-        android:id="@+id/prevButton" />
+        <ImageButton
+            android:id="@+id/prevButton"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
+        <ImageButton
+            android:id="@+id/nextButton"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
+    </RelativeLayout>
 
 </LinearLayout>
