--- a/HappyTravels/app/src/main/res/layout/fragment_theme_dialog.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_theme_dialog.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.idayanisdiazfernandez.happytravels.ThemeFragment">
+    tools:context="com.idayanisdiazfernandez.happytravels.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
