--- a/HappyTravels/app/src/main/res/layout/fragment_theme_dialog.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_theme_dialog.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="315dp"
+        android:minWidth="315dp">
 
         <LinearLayout
             android:layout_width="match_parent"
