--- a/HappyTravels/app/src/main/res/layout/place_card.xml
+++ b/HappyTravels/app/src/main/res/layout/place_card.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:elevation="3dp"
         card_view:cardCornerRadius="5dp"
-        android:layout_margin="8dp">
+        android:layout_margin="6dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +43,9 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/place_title_padding"
                 android:paddingRight="@dimen/place_title_padding"
-                android:textSize="@dimen/place_title"/>
+                android:textSize="14dp"
+                android:textStyle="normal|italic"
+                android:paddingBottom="5dp" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
