#3 Email, Web and Geo code properties are added in the super class and subclasses and constructors are udpated in classes.

--- a/HappyTravels/app/src/main/res/layout/fragment_airport.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_airport.xml
@@ -32,7 +32,7 @@
                     android:padding="@dimen/text_padding" />
 
                 <ImageView
-                    android:id="@+id/thumbnail"
+                    android:id="@+id/coverPhoto"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/cover_height"
                     android:background="?attr/selectableItemBackgroundBorderless"
