--- a/HappyTravels/app/src/main/res/layout/fragment_airport.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_airport.xml
@@ -21,27 +21,27 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/place_name"
+                    android:id="@+id/nameText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
+                    android:padding="@dimen/text_padding"
                     android:text="Name of the Place"
                     android:textAlignment="center"
                     android:textSize="@dimen/title_text_size"
-                    android:textStyle="normal|bold"
-                    android:padding="@dimen/text_padding" />
+                    android:textStyle="normal|bold" />
 
                 <ImageView
                     android:id="@+id/coverPhoto"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/cover_height"
+                    android:layout_gravity="center_horizontal"
+                    android:adjustViewBounds="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/place11"
-                    android:adjustViewBounds="true"
                     android:cropToPadding="true"
-                    android:layout_gravity="center_horizontal"/>
+                    android:scaleType="fitXY"
+                    android:src="@drawable/place11" />
 
                 <LinearLayout
                     android:id="@+id/actionButtonsLayout"
@@ -96,49 +96,65 @@
                     android:id="@+id/descriptionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Description of the place"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/timingText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Timing"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/priceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Price"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/flightsText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Flights"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/addressText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Location"
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Phone Number"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
-                    android:id="@+id/locationText"
+                    android:id="@+id/emailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Location"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:padding="@dimen/text_padding"
+                    android:text="Email Address"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/webPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Web Page"
+                    android:textSize="@dimen/text_size" />
 
             </LinearLayout>
 
