The TransportationFragment.java has all the required properties.

--- a/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
@@ -93,11 +93,11 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/descriptionText"
+                    android:id="@+id/departmentText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/text_padding"
-                    android:text="Description of the place"
+                    android:text="Department of the place"
                     android:textSize="@dimen/text_size" />
 
                 <TextView
