--- a/HappyTravels/app/src/main/res/layout/fragment_transportation.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_transportation.xml
@@ -78,13 +78,6 @@
                         card_view:srcCompat="@drawable/ic_location_on_black_24dp" />
 
                     <ImageButton
-                        android:id="@+id/photoImageButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        card_view:srcCompat="@drawable/ic_collections_black_24dp" />
-
-                    <ImageButton
                         android:id="@+id/shareImageButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -123,6 +116,38 @@
                     android:text="Price Range"
                     android:textSize="@dimen/text_size"
                     android:padding="@dimen/text_padding" />
+
+                <TextView
+                    android:id="@+id/addressText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Location"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/phoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Phone Number"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/emailAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Email Address"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/webPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Web Page"
+                    android:textSize="@dimen/text_size" />
 
             </LinearLayout>
 
